--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Bento</title>
+    <title>Iamdevieka</title>
     <link rel=" shortcut icon" type="image/png" href="icons/favicon.png" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -33,17 +33,6 @@
           <div id="month" class=""></div>
           <div id="day" class=""></div>
         </div>
-        <div class="weatherBlock__weather">
-          <div class="weather-icon">
-            <img src="icons/OneDark/unknown.png" />
-          </div>
-          <div class="temperature-value">
-            <p class="">- °<span class="g">c</span></p>
-          </div>
-          <div class="temperature-description">
-            <p class=""></p>
-          </div>
-        </div>
       </div>
 
       <!-- Buttons Links  -->
@@ -58,7 +47,7 @@
         </a>
         <a
           target="blank"
-          href="https://outlook.live.com/mail/inbox"
+          href="https://mail.google.com/"
           class="buttonLink__link card buttonLink__link-2"
         >
           <i class="buttonLink__icon" data-feather="mail"></i>
